--- a/card.ui
+++ b/card.ui
@@ -22,11 +22,17 @@
      <height>68</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Nunito,sans-serif</family>
+     <pointsize>-1</pointsize>
+     <kerning>true</kerning>
+    </font>
+   </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
     background-color: white;
     border-radius: 10px;
-    border: 2px solid #9266CC;
     font-family: 'Nunito', sans-serif;
     font-size: 14px;
     color: #333333;
@@ -63,7 +69,6 @@ QPushButton[checked=&quot;true&quot;] {
     <string notr="true">QPushButton {
     background-color: white;
     border-radius: 10px;
-    border: 2px solid #9266CC;
     font-family: 'Nunito', sans-serif;
     font-size: 14px;
     color: #333333;
@@ -100,7 +105,6 @@ QPushButton[checked=&quot;true&quot;] {
     <string notr="true">QPushButton {
     background-color: white;
     border-radius: 10px;
-    border: 2px solid #9266CC;
     font-family: 'Nunito', sans-serif;
     font-size: 14px;
     color: #333333;
@@ -137,7 +141,6 @@ QPushButton[checked=&quot;true&quot;] {
     <string notr="true">QPushButton {
     background-color: white;
     border-radius: 10px;
-    border: 2px solid #9266CC;
     font-family: 'Nunito', sans-serif;
     font-size: 14px;
     color: #333333;
@@ -161,7 +164,66 @@ QPushButton[checked=&quot;true&quot;] {
     <string>Settings</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>120</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="src/check.qrc">:/newPrefix/check.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>190</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="src/check.qrc">:/newPrefix/check.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>260</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="src/check.qrc">:/newPrefix/add.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="src/check.qrc"/>
+ </resources>
  <connections/>
 </ui>
